# telecord

./: .env.sample  .travis.yml  Cargo.toml  README.md  Release.toml
src/: config.rs  lib.rs  main.rs
src/dc/: functions.rs  handler.rs  message.rs  mod.rs  telegram.rs
src/tg/: discord.rs  download.rs  functions.rs  message.rs  mod.rs
