[package]
name = "telecord"
description = "A bot to join Telegram Chats to Discord Channels"
version = "0.1.3"
license = "GPL-3.0"
authors = ["Riley Trautman <asonix@tamu.edu>"]
repository = "https://github.com/asonix/telecord"
readme = "README.md"
keywords = ["telegram", "discord"]

[dependencies]
dotenv = "0.10"
serenity = "0.4.3"
mime = "0.3"
mime-sniffer = "0.1"
telebot = "0.2.5"
tokio-core = "0.1"
futures = "0.1"
tokio-curl = "0.1"
curl = "0.4"
log = "0.3"
env_logger = "0.3"
