[package]
name = "telecord"
description = "A bot to join Telegram Chats to Discord Channels"
version = "0.1.4"
license = "GPL-3.0"
authors = ["Riley Trautman <asonix@tamu.edu>"]
repository = "https://github.com/asonix/telecord"
documentation = "https://asonix.gitlab.io/telecord/telecord/index.html"
readme = "README.md"
keywords = ["telegram", "discord"]

[dependencies]
openssl-probe = "0.1.1"
dotenv = "0.11"
serenity = { version = "0.5", features = ["standard_framework"] }
mime = "0.3"
mime-sniffer = "0.1"
telebot = "^0.2.8"
tokio-core = "0.1"
futures = "0.1"
hyper = "^0.11"
hyper-tls = "0.1"
native-tls = "0.1"
log = "0.4"
env_logger = "0.5"
